<resources>
    <string name="app_name">Company Review</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_companies">Aziende</string>
    <string name="title_activity_login">Login</string>
    <string name="action_sign_in_short">Accedi</string>
    
    <!-- Auth strings -->
    <string name="login">Accedi</string>
    <string name="register">Registrati</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="prompt_name">Nome completo</string>
    <string name="prompt_bio">Bio</string>
    <string name="prompt_profile_image">URL immagine profilo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Conferma password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_register">Registrati</string>
    <string name="user_account">Utente</string>
    <string name="company_account">Azienda</string>
    <string name="prompt_settore">Settore</string>
    <string name="prompt_localita">Località</string>
    <string name="welcome">Benvenuto</string>
    
    <!-- Validation messages -->
    <string name="error_invalid_email">Email non valida</string>
    <string name="error_invalid_password">La password deve essere almeno di 6 caratteri</string>
    <string name="error_passwords_not_matching">Le password non coincidono</string>
    <string name="error_field_required">Campo obbligatorio</string>
    <string name="login_failed">Login fallito</string>
    <string name="registration_failed">Registrazione fallita</string>
    <string name="registration_success">Registrazione completata con successo</string>
    <string name="invalid_registration_fields">Compila tutti i campi</string>
    <string name="passwords_do_not_match">Le password non coincidono</string>
    <string name="edit_profile">Modifica profilo</string>
    <string name="save">Salva</string>
    <string name="cancel">Annulla</string>
    <string name="profile_updated">Profilo aggiornato!</string>
    <string name="profile_update_error">Errore aggiornamento profilo</string>
    <string name="invalid_username">Nome utente non valido</string>
    <string name="invalid_password">Password non valida</string>
</resources>