<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.myapplication.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_companies"
        android:name="com.example.myapplication.ui.company.CompanyListFragment"
        android:label="@string/title_companies"
        tools:layout="@layout/fragment_company_list" >
        <action
            android:id="@+id/action_navigation_companies_to_aziendaRecensioniFragment"
            app:destination="@id/aziendaRecensioniFragment" />
        <action
            android:id="@+id/action_navigation_companies_to_aziendaFragment"
            app:destination="@id/aziendaFragment" />
    </fragment>
    <fragment
        android:id="@+id/aziendaFragment"
        android:name="com.example.myapplication.AziendaFragment"
        android:label="fragment_azienda"
        tools:layout="@layout/fragment_azienda">
    <argument
        android:name="companyId"
        app:argType="string" />
</fragment>
    <fragment
        android:id="@+id/aziendaRecensioniFragment"
        android:name="com.example.myapplication.ui.review.AziendaRecensioniFragment"
        android:label="AziendaRecensioniFragment">
        <argument
            android:name="companyId"
            app:argType="string" />
    </fragment>
</navigation>